--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,30 @@
-*{
+* {
     box-sizing: border-box;
 }
 
 /*font-family: "Roboto", sans-serif;*/
 /*font-family: "Lato", sans-serif;*/
 
+body {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+}
+
+.container {
+    max-width: 1030px;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin: 0 auto;
+}
+
 .header {
     background-size: cover;
     background-repeat: no-repeat;
     height: 100vh;
     background-position: center center;
+    padding-top: 110px;
 }
+
 .header__inner {
     text-align: center;
     width: 530px;
@@ -19,10 +33,153 @@
     background-color: #FFFFFF;
     border: 10px solid #f4d4a5;
     padding-top: 13px;
+    padding-bottom: 160px;
+    margin-left: 160px;
 }
+
 .header__name {
-    padding-top: 16px;
+    padding-top: 12px;
     text-transform: uppercase;
+    font-family: "Lato", sans-serif;
+    font-weight: bold;
     font-size: 35px;
     color: #bf4200;
+    margin-bottom: 15px;
+}
+
+.phone {
+    font-size: 35px;
+    font-weight: 300;
+    color: #000000;
+    text-decoration: none;
+    margin-bottom: 40px;
+    display: inline-block;
+}
+
+.header__title {
+    font-weight: bold;
+    text-transform: uppercase;
+    color: #1fad26;
+    font-size: 50px;
+    padding: 0 5px;
+}
+
+.header__sale {
+    margin-top: 40px;
+}
+
+.main {
+    text-align: center;
+    padding-top: 60px;
+}
+
+.main__title {
+    color: #d07a2b;
+    font-size: 41px;
+    margin-bottom: 60px;
+}
+
+.main__text {
+    font-size: 30px;
+}
+
+.main__img {
+    padding: 90px 0;
+}
+
+.project__title {
+    margin-bottom: 110px;
+    font-size: 41px;
+    font-weight: 700;
+    color: #d0662d;
+}
+
+.project__item {
+    margin-bottom: 150px;
+}
+
+.project__name {
+    font-weight: bold;
+    font-size: 32px;
+    color: #000000;
+}
+
+.project__size,
+.project__area {
+    font-weight: 400;
+    font-size: 25px;
+    color: #000000;
+}
+
+.project__prise {
+    font-weight: 400;
+    font-size: 25px;
+    color: #17753b;
+    margin-bottom: 25px;
+}
+
+.download {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #f1dfbc;
+    align-items: center;
+    padding: 40px 0;
+    margin-bottom: 120px;
+
+}
+
+.download__btn {
+    text-transform: uppercase;
+    color: #FFFFFF;
+    font-size: 32px;
+    font-weight: bold;
+    padding: 28px 35px;
+    background-color: #17753b;
+    border: 5px solid #d0662d;
+}
+
+.gallery__title {
+    text-transform: uppercase;
+    font-weight: bold;
+    color: #d0662d;
+    font-size: 41px;
+    padding-bottom: 40px;
+}
+
+.gallery__text {
+    padding-bottom: 50px;
+    font-size: 25px;
+}
+
+.gallery__inner {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.gallery__inner img {
+    display: block;
+}
+
+.footer {
+    text-align: center;
+}
+
+.footer__inner {
+    display: flex;
+    flex-direction: column;
+}
+
+.footer .phone {
+    font-weight: 700;
+}
+
+.footer__email {
+    padding-top: 40px;
+    padding-bottom: 150px;
+    color: #2f8bc5;
+    text-decoration: underline;
+    font-size: 30px;
+    font-weight: 300;
+    font-family: "Lato", sans-serif;
 }
