--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,8 +178,8 @@ body {
     padding-top: 40px;
     padding-bottom: 150px;
     color: #2f8bc5;
-    text-decoration: underline;
     font-size: 30px;
     font-weight: 300;
     font-family: "Lato", sans-serif;
+    text-decoration: none;
 }
