--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,13 +152,8 @@ body {
     font-size: 25px;
 }
 
-.gallery__inner {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.gallery__inner img {
-    display: block;
+#gallery__inner .gallery .gallery-item {
+  margin: 0;
 }
 
 .footer {
